Remove a line of code that has been commented out since forever.